<resources>
    <string name="app_name">启动选项</string>
    <string name="reboot">重启</string>
    <string name="shutdown">关机</string>
    <string name="recovery">Recovery恢复模式</string>
    <string name="fastboot">Bootloader启动引导模式(Fastboot)</string>
    <string name="hot_reboot">热重启</string>
    <string name="reboot_ui">重启用户界面</string>
    <string name="safety">安全模式</string>
    <string name="lockscreen">锁屏</string>
    <string name="force_mode">转换成强制模式</string>
    <string name="normal_mode">转换成默认模式</string>
    <string name="normal_not_support">Android4.3以下重启到recovery或者bootloader只能使用强制模式</string>
    <string name="cmd_send_notice">命令已发送......\n如果这片烤面包片消失之后手机还是没有反应,应该是执行失败了.请到帮助那里查看解决方法</string>
    <string name="exit">退出</string>
    <string name="help">帮助</string>
    <string name="mode_switch">切换模式</string>
    <string name="no_seleted_notice">请重新打开此应用进行选择</string>
    <string name="system_power_dialog">打开系统电源菜单</string>
    <string name="loading">载入中......</string>
    <string name="r_whitetheme">白色主题</string>
    <string name="r_cancelable">返回键退出</string>
    <string name="r_normal_do">无需二次确认</string>
    <string name="r_no_root_check">不检查root权限</string>
    <string name="r_unroot_mode">手动免root模式</string>
    <string name="exit_notice">点击了界面外或按下了返回键,应用退出</string>
    <string name="confirm_operation">确认操作？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="root_title">启动选项↓</string>
    <string name="unroot_title">启动选项↓(免root模式)</string>
    <string name="description">锁屏依赖,卸载时请关闭(Android P和Wear OS H无用)</string>
    <string name="accessibility_service_description">只有开启本服务才能调用系统电源菜单和在Android P及以上使用免root锁屏,这并不会泄露你的任何隐私\n\n注意：Android 5.0以下或root模式中该开关并无用处,请保持关闭状态.Wear OS除非是版本H(API Level=28)以上,否则也没有必要开启此项.</string>
    <string name="service_name">启动选项 - 调用系统电源菜单服务</string>
    <string name="lockscreen_failed">未开启设备管理器,锁屏失败！</string>
    <string name="service_disabled">你未开启辅助服务或服务已失效…请开启或重新开启辅助服务之后再打开菜单选择此选项</string>
    <string name="service_explanation">这里是启动选项的锁屏确认界面(可以这么理解吧),打开设备管理器锁定屏幕.</string>
    <string name="lollipop_notice">你的Android版本在5.0以下,在免root模式中只能使用锁屏功能</string>
    <string name="spd_showed">已经调出系统电源菜单…</string>
    <string name="offical_download_link">官方下载(链接)</string>
    <string name="source_code">源代码…</string>
    <string name="help_notice">应用版本：%s\n帮助更新日期：%s</string>
    <string name="help_update_date">20190313</string>
    <string name="recovery_short">Recovery</string>
    <string name="sys_power_dialog_tile_label">电源菜单</string>
    <string name="fastboot_short">Fastboot</string>
    <string name="nougat_notice">你的Android版本在7.0以下,不支持免root模式直接重启</string>
    <string name="dpm_reboot_error">出现错误,你的设备可能在呼叫状态或者发生了其他未知异常</string>
    <string name="device_owner_disabled">未申请设备所有者,重启功能被禁用</string>
    <string name="clear_owner">解除Device Owner身份</string>
    <string name="clear_owner_notice">已解除Device Owner,再次进入重启将禁用</string>
    <string name="lockscreen_unroot">锁屏免R</string>
    <string name="reboot_unroot">重启免R</string>
    <string name="rebootui_short">重启UI</string>
    <string name="launcher_shortcut_added">已经尝试添加了快捷方式(%s)…</string>
    <string name="url_open_failed_notice">似乎没有可以打开的应用…</string>
    <string name="notification_notice">点击打开应用</string>
    <string name="spd_tile_label">系统电源</string>
    <string name="service_simple_name">调用系统电源菜单服务(常驻)</string>
    <string name="accessibility_summary">此服务用以支持本应用在没有根权限环境下可用的部分或全部功能</string>
    <string name="kitkat_compat">\n× 即将放弃支持Android4.4以下系统</string>
    <string name="disable_device_admin_warning">在Android P以下(不含P),禁用设备管理应用功能会失去免root锁屏的权限!如果你的目的不是卸载,你确定吗要这样做吗?</string>
    <string name="preference_title">设置选项</string>
    <string name="quick_lock_screen">快捷锁屏</string>
    <string name="monkey_test_notice">\"猴子\"不能打开本应用主UI</string>
    <string name="secret_code_label">隐藏的测试</string>
    <string name="hidden_function_description">启动选项的试验性功能</string>
    <string name="xposed_description">加快Root默认模式的项目执行速度(实验性)\n备用方案,开机自启的root权限已经顶替了这个功能</string>
    <string name="accessibility_service_sunnary_hint">服务保活用通知</string>
    <string name="android_wear_power_menu_in_sys_settings">打开\"系统\"选项后,往下翻…</string>
    <string name="android_waer_cannot_open_url">zxing应用缺失,无法打开网址\n%s</string>
    <string name="xposed_warning">Xposed插件警告</string>
    <string name="xposed_not_support">本应用的Xposed模块不支持此环境</string>
    <string name="xposed_conflict_with_tv_ser">TvInputService冲突!</string>
    <string name="disabled_xposed_module_notice">必须手动禁用并重启以免影响设备正常使用</string>
    <string name="only_for_dev">本界面仅面向开发人员,使用前请查看代码实现</string>
    <string name="pref_wes_perm_denied">保存配置可能需要存储权限\n如果配置不能保存,请检查相关权限设置</string>
    <string name="username">用户名:</string>
    <string name="password">密码:</string>
    <string name="send">发送</string>
    <string name="see_err_info">查看错误描述内容…</string>
    <string name="android_wear_show_qr_code_zxing_tips">请用手机扫描二维码打开网址</string>
    <string name="crash_ui_tips">之所以会出现这个界面,是因为本应用出现了崩溃异常.需要使用你的Github账户向本应用的开源仓库发送包含错误描述信息和环境特征信息的issue以便开发者解决此问题.</string>
    <string name="more_des_hint">细节描述补充(可选,限制容量1KiB):</string>
    <string name="contact_request">允许开发者与你在Github上关于此bug进行进一步沟通</string>
    <string name="send_bug_report_succeeded">报告发送成功,开发者将会查看并处理它,感谢提交\n接下来尝试重新启动本应用…</string>
    <string name="send_bug_report_failed">报告发送失败,请检查网络连接是否正常,账户信息和系统时间是否正确…</string>
    <string name="sending">发送中……</string>
    <string name="auto_download_hint">具备存储权限,准备自动下载…\n如果下载管理器不能工作,长按本按钮跳转至下载页面</string>
    <string name="dl_serv_hint_link_analyse_success">链接解析成功,准备调用下载管理器下载,请注意通知栏或者\"下载\"应用…</string>
    <string name="dl_serv_hint_link_auto_dl_failed">出现错误,自动下载失败,通过浏览器打开下载页面链接…</string>
    <string name="dl_info_description">版本:%s,总下载次数:%d,发布版本数:%d</string>
    <string name="hide_build_info">不发送系统环境构建信息</string>
    <string name="copy_to_clipboard">复制进剪贴板</string>
    <string name="auto_send_crash_report">自动发送错误报告(适合没有Github账号的用户,下次生效)</string>
    <string name="auto_crash_report_hint">你不会再次看到此界面,因为之后所有的崩溃异常都将自动上传</string>
    <string name="ad_opened_toast">点击叉号关闭广告\n或者点击广告帮开发者盈利</string>
    <string name="accessibility_settings_not_found">找不到无障碍服务设置页面或出现其他错误,请自行前往并开启本应用的辅助服务</string>
    <string name="hint_add_dev_admin_activity_not_found">DevicePolicyManager.ACTION_ADD_DEVICE_ADMIN匹配的活动不存在</string>
    <string name="hint_android_tv_error">不支持Android P以下的Android TV</string>
</resources>
